Revert encodeUrl to use new URL(rawUrl) for lenient parsing
URI.create() is too strict for encodeUrl() which is designed to accept
raw URLs with potentially unencoded characters (spaces, etc.) and encode
them. new URL(String) is NOT deprecated in Java 17 (only in Java 20+)
and provides the lenient parsing this method requires. The URI.create()
change in JdkClient.parseUrl() is retained as that method validates
already-formed URLs.

Co-Authored-By: mark.o.price@gmail.com <mark.o.price@gmail.com>