@@ -5,7 +5,6 @@ import io.github.jpmorganchase.fusion.api.operations.APIDownloadOperations;
 import io.github.jpmorganchase.fusion.api.operations.APIUploadOperations;
 import io.github.jpmorganchase.fusion.http.HttpResponse;
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -64,7 +63,7 @@ public interface APIManager extends APIDownloadOperations, APIUploadOperations {
 
     static String encodeUrl(String rawUrl) {
         try {
-            URL url = URI.create(rawUrl).toURL();
+            URL url = new URL(rawUrl);
 
             String protocol = url.getProtocol();
             String host = url.getHost();
@@ -112,7 +111,7 @@ public interface APIManager extends APIDownloadOperations, APIUploadOperations {
             }
 
             return finalUrl.toString();
-        } catch (MalformedURLException | IllegalArgumentException e) {
+        } catch (MalformedURLException e) {
             throw new RuntimeException(e);
         }
     }
